@@ -16,6 +16,7 @@ BUG FIXES:
 	  add the wildcard domain NSEC into the answer section. Instead,
 	  put the wildcard expanded NSEC into the answer section and keep the
 	  wildcard domain NSEC in the authority section.
+	- Fix for accept spinning reported by OpenBSD.
 
 OPERATIONAL NOTES:
 	- NSD uses the query name for dname compression again (Fix #235 
