@@ -50,6 +50,8 @@
 
 #include "region-allocator.h"
 
+#define NETIO_SLOW_ACCEPT_TIMEOUT 2 /* in seconds */
+
 /*
  * The type of events a handler is interested in.  These can be OR'ed
  * together to specify multiple event types.
@@ -59,7 +61,8 @@ enum netio_event_types {
 	NETIO_EVENT_READ    = 1,
 	NETIO_EVENT_WRITE   = 2,
 	NETIO_EVENT_EXCEPT  = 4,
-	NETIO_EVENT_TIMEOUT = 8
+	NETIO_EVENT_TIMEOUT = 8,
+	NETIO_EVENT_ACCEPT = 16
 };
 typedef enum netio_event_types netio_event_types_type;
 
