@@ -1,3 +1,6 @@
+31 May 2012: Matthijs
+	- Fix for accept spinning reported by OpenBSD.
+
 17 April 2012: Matthijs
 	- Changes according to RFC 5936 (AXFR clarify) and EDNS0bis.
 
